--- a/Day-2/index.html
+++ b/Day-2/index.html
@@ -23,6 +23,8 @@
         minima distinctio et accusantium incidunt deserunt nam repellat numquam laboriosam,
          excepturi expedita cum quae voluptatibus ipsum fugit reprehenderit facere, magnam asperiores!</p>
     <hr>
+
+
     <h3> Tables</h3>
     <table border="ipx">
         <t>
@@ -52,5 +54,6 @@
             <td>Krithika</td>
         </tr>
     </table>
+    <a href ="./part2.html" click on the link to learn more
 </body>
 </html>
