--- a/Day-2/part2.html
+++ b/Day-2/part2.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day-1</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Completed using pull request</h1>
+    <a href="./index.html" to go to the next pag></a>
 </body>
 </html>
