Final commit for day-2

--- a/Day-2/index.html
+++ b/Day-2/index.html
@@ -24,7 +24,14 @@
          excepturi expedita cum quae voluptatibus ipsum fugit reprehenderit facere, magnam asperiores!</p>
     <hr>
 
+ <h1>Heading 1</h1>
+ <h2>Heading 1</h2>
+ <h3>Heading 1</h3>
+ <h4>Heading 1</h4>
+ <h5>Heading 1</h5>
+ <h6>Heading 1</h6>
 
+ <br>
     <h3> Tables</h3>
     <table border="ipx">
         <t>
@@ -54,6 +61,6 @@
             <td>Krithika</td>
         </tr>
     </table>
-    <a href ="./part2.html" click on the link to learn more
+    <a href ="./part2.html" >click on the link to learn more</a>
 </body>
 </html>
