--- a/Day-2/part2.html
+++ b/Day-2/part2.html
@@ -6,6 +6,38 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./index.html" to go to the next pag></a>
+    <a href="./index.html">back</a>
+
+    <h3> Html forms</h3>
+    <form action="action.html" >
+        <label for="first name">First name: </label>
+        <input type="text" placeholder="Enter your first name" required>
+        <br>
+        <label for="last name">Last Name: </label>
+        <input type="text" placeholder="Enter you last name" required>
+        <br>
+        <label for="email">Email </label>
+        <input type="email" placeholder="Enter your email i'd" required>
+        <br>
+        <label for="password">Password </label>
+        <input type="password" placeholder="Enter you password " required>
+        <br>
+        <label for="dob">Date of Birth</label>
+        <input type="date" required>
+        <br>
+        <label for="phone_no">Phone Number: </label>
+        <input type="tel" placeholder="Enter you phone number" required>
+        <br>
+        <input type="radio" id="gender">
+        <label for="Male">Male</label>  
+        <br>
+        <input type="radio" id="gender">
+        <label for="Female">Female</label>  
+        <br>
+        <button type="submit">Sign up</button>
+        <br>
+    
+    </form>
+    <p>Already have a account<a href="login.html">Login</a></p>
 </body>
 </html>
