--- a/Day-3/incssp1.html
+++ b/Day-3/incssp1.html
@@ -7,8 +7,25 @@
     <link rel="stylesheet" href="incssp1.css">
 </head>
 <body>
-    <h1>Starting with Intermediate CSS</h1>
+    <h1 class="fixed-position">Starting with Intermediate CSS</h1>
+    <h2 class="relative-position box-model "s >Box Model</h2>
     <h2 class="box-model">Box Model</h2>
+    <h2 class="box-model">Box Model</h2>
+    <h2 class="box-model">Box Model</h2>
+    <h2 class="box-model">Box Model</h2>
+    <h2 class="box-model">Box Model</h2>
+    <h2 class="box-model">Box Model</h2>
+    <h2 class="box-model">Box Model</h2>
+    <h2 class="box-model">Box Model</h2>
+    <h2 class="box-model">Box Model</h2>
+    <h2 class="box-model">Box Model</h2>
+    <h2 class="box-model">Box Model</h2>
+    <h2 class="box-model">Box Model</h2>
+    <h2 class="box-model">Box Model</h2>
+    <h2 class="box-model">Box Model</h2>
+    <h2 class="box-model">Box Model</h2>
+    <h2 class="box-model">Box Model</h2>
+    <hr>
     <a href="index.html">Go to Previous page</a>
 </body>
 </html>
